# commander-ai-lab

./: .coveragerc  .env.example  .gitignore  COMMANDER_GUI_ROADMAP.md  Makefile  README.md  ROUTES_WIRING.md  Test-PolicyServer.ps1  card_names_cache.json  collection.db  dependency-reduced-pom.xml  engine.js  index.html  install-commander-ai-lab.ps1  lab.db  lab_api.py  lab_api_backup.py  lab_api_new.py  lab_api_patched.py  mtg-commander-lan instructions.txt  overnight-run.bat  overnight-run.py  package-lock.json  pom.xml  pyproject.toml  pytest.ini  requirements-web.txt  requirements.txt  run_benchmark.ps1  start-lab.bat  style.css  template-reference.html  ui.js
coach/: __init__.py  coach_service.py  config.py  embeddings.py  llm_client.py  models.py  prompt_template.py  report_generator.py
coach-sessions/: sess-20260309-192805-5109b9.json  sess-20260309-192859-4b9fb6.json  sess-20260309-192954-9c7251.json  sess-20260309-193052-cb65e3.json  sess-20260310-013825-7ae232.json  sess-20260310-064107-02017e.json
data/: .gitkeep  collection.csv.example
deck-reports/: Counterpunch.json  Devour_for_Power_CMD.json  Heavenly_Inferno_CMD.json
deck_sources/: __init__.py  archidekt_adapter.py  edhrec_adapter.py  models.py  moxfield_adapter.py  mtggoldfish_adapter.py
docs/: CLOSED-LOOP-DISTILLATION.md  PHASE1-SELF-PLAY-INTEGRATION-CHECKLIST.md  PROJECT_VISION.md  batch-result-schema.json  game-log-schema.json  implementation_plan.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
lan-client/: ai-bridge.js  collection.css  collection.html  collection.js  deckbuilder.css  deckbuilder.html  deckbuilder.js  deckgenerator.css  deckgenerator.html  deckgenerator.js  engine.js  global.css  index.html  player-panels.js  precon-loader.js  precons.js  style.css  ui.js
models/: __init__.py  requests.py  responses.py  state.py
precon-decks/: 20_Ways_to_Win.dck  Abzan_Armor.dck  Adaptive_Enchantment.dck  Ahoy_Mateys.dck  Angels_Theyre_Just_Like_Us_but_Cooler_and_with_Wings.dck  Animated_Army.dck  Arcane_Maelstrom.dck  Arcane_Wizardry.dck  Arm_for_Battle.dck  Aura_of_Courage.dck  Bedecked_Brokers.dck  Blame_Game.dck  Blight_Curse.dck  Blood_Rites.dck  Breed_Lethality_C16.dck  Breed_Lethality_CM2.dck  Buckle_Up.dck  Built_From_Scratch_C14.dck  Built_From_Scratch_CM2.dck  Cabaretti_Cacophony.dck  Call_the_Spirits.dck  Chaos_Incarnate.dck  Corrupting_Influence.dck  Counter_Blitz_(FINAL_FANTASY_X).dck  Counter_Blitz_Collectors_Edition_(FINAL_FANTASY_X).dck  Counter_Intelligence.dck  Counterpunch.dck  Coven_Counters.dck  Creative_Energy.dck  Creative_Energy_Collectors_Edition.dck  Dance_of_the_Elements.dck  Deadly_Disguise.dck  Deep_Clue_Sea.dck  Desert_Bloom.dck  Devour_for_Power_CM2.dck  Devour_for_Power_CMD.dck  Draconic_Destruction.dck  Draconic_Dissent.dck  Draconic_Domination.dck  Draconic_Rage.dck  (+123 more)
results/: batch-c229c292-759.json
ui/: coach.js  (+25 more)
(+397 files in other folders)
